--- a/src/components/Scoreboard/Scoreboard.module.css
+++ b/src/components/Scoreboard/Scoreboard.module.css
@@ -3,5 +3,17 @@
 }
 
 .scoreItem {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.label,
+.score {
   font-family: var(--game-font);
+  color: var(--yellow);
+}
+
+.score {
+  justify-self: end;
 }
