--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -128,6 +128,7 @@
     background: CanvasText;
     color: Canvas;
     border: 1px solid transparent;
+    cursor: pointer;
   }
   textarea {
     field-sizing: content;
