--- a/src/components/Gameboard/Card/Card.module.css
+++ b/src/components/Gameboard/Card/Card.module.css
@@ -4,15 +4,20 @@
   position: relative;
   display: grid;
   place-items: center;
+  padding: 1rem;
 }
 
 .pokemonImageWrapper {
-  width: 80%;
-  height: 100%;
+  height: 90%;
+  width: 75%;
+  display: grid;
+  place-items: end;
 }
 
 .pokemonImage {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .pokemonName {
