--- a/src/components/Scoreboard/Scoreboard.module.css
+++ b/src/components/Scoreboard/Scoreboard.module.css
@@ -3,6 +3,7 @@
 }
 
 .scoreItem {
+  padding: 0 !important;
   display: flex;
   justify-content: space-between;
   gap: 2rem;
@@ -12,6 +13,8 @@
 .score {
   font-family: var(--game-font);
   color: var(--yellow);
+  font-size: medium;
+  line-height: 0;
 }
 
 .score {
