--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,12 @@ body {
   overflow: hidden;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 h1 {
   font-family: var(--game-font);
 }
