feat(Header): align the left-side and right-side (scoreboard)
had to use a translateY because the font is causing issues (it doesn't seem to want to be in the centre of its wrapper?? so then the result is the pokemems text to the left of the header is shifted upwards...

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: space-between;
   gap: 2rem;
+  height: auto;
 }
 
 .left {
-  flex: 1;
+  transform: translateY(15%);
 }
 
 .heading,
@@ -16,7 +17,6 @@
 
 .heading {
   line-height: 0;
-  font-size: xx-large;
 }
 
 .subtext {
