feat: build non-responsive and static Gameboard, with Card subcomponents (#35)
Build UI so that I can start beefing it up with functionalities (rather
than just a blank screen).

This includes:
1. Colouring the background and various texts
2. Placing things on the screen (though in a non-responsive way --
responsiveness is higher effort and should be separate PR to keep this
one more atomic)
3. Displaying Pokemons on `<Card />` components, which are essentially
buttons (to be semantic) so users can click them

Foreseeing some potential challenges with making this responsive again
though...

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -25,13 +25,7 @@
 
   h1,
   h2 {
-    font-weight: 900;
     letter-spacing: -0.02rem;
-  }
-  h1,
-  h2,
-  h3 {
-    line-height: 1.1;
   }
   h1,
   h2,
@@ -129,6 +123,7 @@
     background: CanvasText;
     color: Canvas;
     border: 1px solid transparent;
+    cursor: pointer;
   }
   textarea {
     field-sizing: content;
