--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 :root {
   --purple: #3d308b;
   --dark-purple: #330066;
-  --lilac: #7672ed;
+  --lilac: hsl(242, 100%, 85%);
   --yellow: #f7b801;
 
   --game-font: "Press Start 2P", system-ui;
