--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -17,6 +17,12 @@
   place-content: center;
 }
 
+.img {
+  margin: 0 auto;
+  width: 5rem;
+  height: 5rem;
+}
+
 .text {
   text-align: center;
   font-family: var(--game-font);
