feat(LoadingScreen): add animations to elements
add pause before restarting animations

feat(LoadingScreen): add blinking dots (ellipses) in text

feat(LoadingScreen): rotate the masterball

feat(LoadingScreen): pause before restarting animations

--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -21,6 +21,7 @@
   margin: 0 auto;
   width: 5rem;
   height: 5rem;
+  animation: rotate 1.75s ease-in-out 0s infinite;
 }
 
 .text {
@@ -28,4 +29,44 @@
   font-family: var(--game-font);
   color: var(--purple);
   font-size: medium;
+}
+
+.text::after {
+  display: inline-block;
+  animation: dots 2s steps(1, end) infinite;
+  content: "";
+}
+
+/* ANIMATIONS */
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  20% {
+    content: ".";
+  }
+  40% {
+    content: "..";
+  }
+  60% {
+    content: "...";
+  }
+  80% {
+    content: "...";
+  }
+  100% {
+    content: "...";
+  }
 }
