refactor(LoadingScreen): the backdrop for the loading screen is generalised for reusability
so that we can keep codebase more DRY, the backdrop styling for loading screen is now in the modals.module.css (loading screen is essentially a modal that blocks users from interacting with the screen) for 'compos[ing]' in LoadingScreen CSS module file

--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -1,11 +1,5 @@
-.loadingScreen {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100dvw;
-  height: 100dvh;
-  background-color: rgba(0, 0, 0, 0.7);
-  place-content: center;
+.backdrop {
+  composes: backdrop from "../../styles/modals.module.css";
 }
 
 .card {
