refactor(LoadingScreen): the styling for the actual modal (called 'card' in LoadingScreen) is generalised

--- a/src/components/GameOverModal/GameOverModal.module.css
+++ b/src/components/GameOverModal/GameOverModal.module.css
@@ -1,3 +1,7 @@
 .backdrop {
   composes: backdrop from "../../styles/modals.module.css";
 }
+
+.modal {
+  composes: modal from "../../styles/modals.module.css";
+}
