feat(GameOverModal): add placeholder image and button, but style typography

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
   --dark-purple: #330066;
   --lilac: hsl(242, 100%, 85%);
   --yellow: #f7b801;
+  --grey: #666;
 
   --game-font: "Press Start 2P", system-ui;
 }
