--- a/src/components/GameOverModal/GameOverModal.module.css
+++ b/src/components/GameOverModal/GameOverModal.module.css
@@ -4,4 +4,22 @@
 
 .modal {
   composes: modal from "../../styles/modals.module.css";
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.heading {
+  color: var(--dark-purple);
+  font-family: var(--game-font);
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.copy {
+  color: var(--grey);
+  font-size: large;
+  text-align: center;
 }
