--- a/src/components/GameOverModal/GameOverModal.module.css
+++ b/src/components/GameOverModal/GameOverModal.module.css
@@ -23,3 +23,21 @@
   font-size: large;
   text-align: center;
 }
+
+.button {
+  margin-top: 0.5rem;
+  font-size: 0.75rem;
+  font-weight: 500;
+  background-color: var(--purple);
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+}
+
+.button:hover {
+  background-color: hsl(249, 49%, 33%);
+}
+
+.button:active {
+  transform: translateY(2px);
+}
