--- a/src/components/GameOverModal/GameOverModal.module.css
+++ b/src/components/GameOverModal/GameOverModal.module.css
@@ -18,6 +18,10 @@
   text-align: center;
 }
 
+.img {
+  animation: float 2s linear infinite;
+}
+
 .copy {
   color: var(--grey);
   font-size: large;
@@ -40,4 +44,15 @@
 
 .button:active {
   transform: translateY(2px);
+}
+
+/* ANIMATIONS */
+@keyframes float {
+  0%,
+  100% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translateY(-12px);
+  }
 }
