feat(EndGameModal): add wrapper to GameOverModal, which renders if there is not a new high score
this is to set up the High Score modal when it's ready, which gets called conditionally within EndGameModal (and thus rendered) if there _is_ a high score. I thought this would be cleaner than to have this condition happen at the App level

--- a/src/components/EndGameModal/GameOverModal/GameOverModal.module.css
+++ b/src/components/EndGameModal/GameOverModal/GameOverModal.module.css
@@ -1,9 +1,9 @@
 .backdrop {
-  composes: backdrop from "../../styles/modals.module.css";
+  composes: backdrop from "../../../styles/modals.module.css";
 }
 
 .modal {
-  composes: modal from "../../styles/modals.module.css";
+  composes: modal from "../../../styles/modals.module.css";
   background-color: white;
   display: flex;
   flex-direction: column;
