feat(NewHighScoreModal): style copy, including new high score. use placeholder high score but set up Prop interface so we can use high score as prop

--- a/src/components/EndGameModal/NewHighScoreModal/NewHighScoreModal.module.css
+++ b/src/components/EndGameModal/NewHighScoreModal/NewHighScoreModal.module.css
@@ -18,10 +18,23 @@
   text-align: center;
 }
 
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0;
+}
+
 .copy {
   color: var(--grey);
   font-size: large;
-  text-align: center;
+}
+
+.highScore {
+  font-family: var(--game-font);
+  font-size: 2rem;
+  line-height: 0;
+  color: var(--yellow);
 }
 
 .button {
