--- a/src/components/EndGameModal/NewHighScoreModal/NewHighScoreModal.module.css
+++ b/src/components/EndGameModal/NewHighScoreModal/NewHighScoreModal.module.css
@@ -1,22 +1,14 @@
 .backdrop {
-  composes: backdrop from "../../../styles/modals.module.css";
+  composes: backdrop from "../EndGameModal.module.css";
 }
 
 .modal {
-  composes: modal from "../../../styles/modals.module.css";
+  composes: modal from "../EndGameModal.module.css";
   padding: 2rem;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .heading {
-  color: var(--dark-purple);
-  font-family: var(--game-font);
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  text-align: center;
+  composes: heading from "../EndGameModal.module.css";
 }
 
 .img {
@@ -32,8 +24,7 @@
 }
 
 .copy {
-  color: var(--grey);
-  font-size: large;
+  composes: copyText from "../EndGameModal.module.css";
 }
 
 .highScore {
