--- a/src/components/Gameboard/Card/Card.module.css
+++ b/src/components/Gameboard/Card/Card.module.css
@@ -1,10 +1,6 @@
 .card {
   background-color: var(--lilac);
   border-radius: 0.5rem;
-  position: relative;
-  display: grid;
-  place-items: center;
-  padding: 1rem;
 }
 
 .card:hover {
@@ -15,25 +11,27 @@
     transform 0.15s ease-in;
 }
 
+.inner {
+  padding: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
 .pokemonImageWrapper {
-  height: 90%;
-  width: 75%;
-  display: grid;
-  place-items: end;
+  width: 50%;
+  margin: auto;
 }
 
 .pokemonImage {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .pokemonName {
+  margin-top: 0;
   font-family: var(--game-font);
   color: var(--purple);
   text-transform: uppercase;
-  font-size: medium;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
+  font-size: 16px;
 }
