feat(App): move entire UI down slightly
this is done at the #root div level. however, i didn't just add a justify-content: center, because we don't actually want this app to be in the _true centre_ of the screen, because then the header is too low. what we want, ideally, is the Gameboard to in the centre of players' visions. this transform is just me stabbing in the dark with a magic number i admit :(

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,6 @@
 }
 
 body {
-  height: 100dvh;
   background: #3d308b;
   background: linear-gradient(
     160deg,
@@ -26,9 +25,12 @@ body {
 }
 
 #root {
+  height: 100dvh;
+  margin: auto;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  transform: translateY(10%);
 }
 
 h1 {
