feat: make Card and Gameboard more responsive from desktop size (1080p) down to tablet
adjust gaps in the gameboard grid, reduce font-size of pokemon names, and adjust the heights. i think having the Card components have higher heights on narrower screens looks nicer, because we have less negative space. i've discovered issues with the scoreboard, but i'll do this later -- have left a comment on #11 to remind me

--- a/src/components/Gameboard/Card/Card.module.css
+++ b/src/components/Gameboard/Card/Card.module.css
@@ -19,7 +19,7 @@
 }
 
 .pokemonImageWrapper {
-  width: 50%;
+  width: 75%;
   margin: auto;
 }
 
@@ -34,4 +34,27 @@
   color: var(--purple);
   text-transform: uppercase;
   font-size: 16px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1439px) {
+  .pokemonName {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1229px) {
+  .pokemonImageWrapper {
+    width: 100%;
+  }
+
+  .pokemonName {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 999px) {
+  .inner {
+    padding: 1.5rem 0;
+  }
 }
