--- a/src/components/Gameboard/Gameboard.module.css
+++ b/src/components/Gameboard/Gameboard.module.css
@@ -4,3 +4,16 @@
   grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
 }
+
+/* MEDIA QUERIES */
+@media (max-width: 909px) {
+  .section {
+    gap: 0.75rem;
+  }
+}
+
+@media (max-width: 845px) {
+  .section {
+    gap: 0.5rem;
+  }
+}
