--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 2rem;
-  height: auto;
 }
 
 .left {
@@ -21,4 +21,57 @@
 
 .subtext {
   font-size: medium;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 846px) {
+  .heading {
+    font-size: 1.5rem;
+  }
+
+  .subtext {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 679px) {
+  .header {
+    gap: 0.25rem;
+  }
+}
+
+@media (max-width: 599px) {
+  .header {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+}
+
+@media (max-width: 499px) {
+  .header {
+    grid-template-columns: 1.5fr 1fr;
+    gap: 0.5rem;
+  }
+
+  .heading {
+    font-size: 24px;
+  }
+
+  .subtext {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 409px) {
+  .header {
+    gap: 1rem;
+  }
+
+  .heading {
+    font-size: 16px;
+  }
+
+  .subtext {
+    font-size: 8px;
+  }
 }
