--- a/src/components/Gameboard/Gameboard.module.css
+++ b/src/components/Gameboard/Gameboard.module.css
@@ -28,6 +28,14 @@
 
 @media (max-width: 599px) {
   .section {
-    gap: 0.33rem;
+    gap: 0.75rem;
+  }
+}
+
+/* two-columns enforced */
+@media (max-width: 399px) {
+  .section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
