--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
 }
 
 body {
+  height: 100vh;
   background: #3d308b;
   background: linear-gradient(
     160deg,
@@ -24,8 +25,6 @@ body {
 }
 
 #root {
-  height: 100dvh;
-  margin: auto;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -34,11 +33,4 @@ body {
 
 h1 {
   font-family: var(--game-font);
-}
-
-/* MEDIA QUERIES */
-@media (max-width: 759px) {
-  #root {
-    transform: translateY(2%);
-  }
 }
