refactor(root): use margin-top instead of transform: translate
transform: translate creates another stacking context(?) so then the modal backdrop gets moved as well...

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,9 @@
 }
 
 body {
+  position: relative;
   height: 100vh;
+  width: 100vw;
   background: #3d308b;
   background: linear-gradient(
     160deg,
@@ -25,10 +27,10 @@ body {
 }
 
 #root {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  transform: translateY(6%);
 }
 
 h1 {
