--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -18,7 +18,7 @@
   text-align: center;
   font-family: var(--game-font);
   color: var(--purple);
-  font-size: medium;
+  font-size: 16px;
 }
 
 .text::after {
@@ -58,5 +58,13 @@
   }
   100% {
     content: "...";
+  }
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 499px) {
+  .text {
+    font-size: 12px;
+    text-wrap: nowrap;
   }
 }
