--- a/src/components/Gameboard/Card/Card.module.css
+++ b/src/components/Gameboard/Card/Card.module.css
@@ -1,10 +1,6 @@
 .card {
   background-color: var(--lilac);
   border-radius: 0.5rem;
-  position: relative;
-  display: grid;
-  place-items: center;
-  padding: 1rem;
 }
 
 .card:hover {
@@ -15,25 +11,117 @@
     transform 0.15s ease-in;
 }
 
+.inner {
+  padding: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
 .pokemonImageWrapper {
-  height: 90%;
-  width: 75%;
-  display: grid;
-  place-items: end;
+  width: 66%;
+  margin: auto;
 }
 
 .pokemonImage {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
 .pokemonName {
+  margin-top: 0;
   font-family: var(--game-font);
   color: var(--purple);
   text-transform: uppercase;
-  font-size: medium;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
+  font-size: 16px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 1439px) {
+  .pokemonName {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1229px) {
+  .pokemonImageWrapper {
+    width: 100%;
+  }
+
+  .pokemonName {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 999px) {
+  .inner {
+    padding: 1.5rem 0;
+  }
+}
+
+/* grid collapse */
+@media (max-width: 799px) {
+  .card {
+    width: 160px;
+  }
+
+  .inner {
+    padding: 0;
+  }
+
+  .pokemonImageWrapper {
+    width: 75%;
+  }
+}
+
+@media (max-width: 699px) {
+  .inner {
+    gap: 0;
+  }
+
+  .pokemonName {
+    font-size: 8px;
+  }
+}
+
+@media (max-width: 599px) {
+  .card {
+    width: 132px;
+  }
+}
+
+@media (max-width: 489px) {
+  .card {
+    width: 112px;
+  }
+
+  .pokemonImageWrapper {
+    width: 100%;
+  }
+}
+
+@media (max-width: 399px) {
+  .card {
+    width: 120px;
+  }
+
+  .inner {
+    padding: 0.25rem;
+  }
+
+  .pokemonImageWrapper {
+    width: 80%;
+  }
+}
+
+/* two-columns enforced */
+@media (max-width: 399px) {
+  .card {
+    width: 100%;
+    height: auto;
+  }
+
+  .pokemonImageWrapper {
+    width: 50%;
+  }
 }
