--- a/src/components/Gameboard/Gameboard.module.css
+++ b/src/components/Gameboard/Gameboard.module.css
@@ -1,6 +1,41 @@
 .section {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 909px) {
+  .section {
+    gap: 0.75rem;
+  }
+}
+
+@media (max-width: 845px) {
+  .section {
+    gap: 0.5rem;
+  }
+}
+
+/* grid collapse */
+@media (max-width: 799px) {
+  .section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 599px) {
+  .section {
+    gap: 0.75rem;
+  }
+}
+
+/* two-columns enforced */
+@media (max-width: 399px) {
+  .section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
