--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,11 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
   gap: 2rem;
-  height: auto;
 }
 
 .left {
+  flex: 1;
   transform: translateY(15%);
 }
 
@@ -21,4 +21,37 @@
 
 .subtext {
   font-size: medium;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 846px) {
+  .heading {
+    font-size: 1.5rem;
+  }
+
+  .subtext {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 679px) {
+  .header {
+    gap: 0.5rem;
+  }
+}
+
+@media (max-width: 499px) {
+  .heading {
+    font-size: 24px;
+  }
+
+  .subtext {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 379px) {
+  .heading {
+    font-size: 20px;
+  }
 }
