--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,17 +15,19 @@
 }
 
 body {
-  height: 100dvh;
+  position: relative;
+  height: 100vh;
+  width: 100vw;
   background: #3d308b;
   background: linear-gradient(
     160deg,
     hsl(249, 49%, 40%) 0%,
     hsl(270, 100%, 20%) 100%
   );
-  overflow: hidden;
 }
 
 #root {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
