feat(ErrorModal): add 'try again' and 'report issue' placeholder buttons. refactor(Button): enable optional prop to add custom CSS class name to particular instances
the optional prop allows maximum customisation, rather than something like 'fullWidth' boolean prop. it also aligns with my desire to continue using css modules for various reasons (eg modularity, performance)

--- a/src/components/ErrorModal/ErrorModal.module.css
+++ b/src/components/ErrorModal/ErrorModal.module.css
@@ -26,3 +26,14 @@
   line-height: calc(16px * 1.5);
   text-align: center;
 }
+
+.buttons {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.button {
+  width: 100%;
+}
