--- a/src/components/ErrorModal/ErrorModal.module.css
+++ b/src/components/ErrorModal/ErrorModal.module.css
@@ -23,7 +23,7 @@
   margin-top: 0;
   color: var(--grey);
   font-size: 16px;
-  line-height: calc(16px * 1.5);
+  line-height: 1.5;
   text-align: center;
 }
 
@@ -36,4 +36,12 @@
 
 .button {
   width: 100%;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 499px) {
+  .copy {
+    font-size: 12px;
+    line-height: 1.5;
+  }
 }
