feat: when user uses keyboard to focus on a Card, it has a yellow outline. This is also done for buttons and anchors more generally
anchors are included because the 'Report issue' button on the error modal is actually an anchor (Button is child JSX, wrapped therein)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,3 +37,8 @@ body {
 h1 {
   font-family: var(--game-font);
 }
+
+button:focus-visible,
+a:focus-visible {
+  outline: 8px solid var(--yellow);
+}
