--- a/src/components/HighScoreModal/HighScoreModal.module.css
+++ b/src/components/HighScoreModal/HighScoreModal.module.css
@@ -1,14 +1,20 @@
-.backdrop {
-  composes: backdrop from "../EndGameModal.module.css";
-}
-
 .modal {
-  composes: modal from "../EndGameModal.module.css";
+  background-color: white;
   padding: 2rem;
 }
 
+.inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .heading {
-  composes: heading from "../EndGameModal.module.css";
+  color: var(--dark-purple);
+  font-family: var(--game-font);
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .img {
@@ -24,7 +30,9 @@
 }
 
 .copy {
-  composes: copyText from "../EndGameModal.module.css";
+  color: var(--grey);
+  font-size: 20px;
+  text-align: center;
 }
 
 .highScore {
